updated filter/search js

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -53,7 +53,7 @@
       <div class="main-container" id="main-container-id">
         <ul class="view-navbar">
           <li>
-            <input type="text" placeholder="Search..." class="search-bar" id="searchbar" />
+            <input type="text" placeholder="search song or artist..." class="search-bar" id="searchbar" />
           </li>
 
           <ul class="sort-by" style="float: right;">
