update to closing create account modal

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1233,6 +1233,12 @@
     </div>
   </div>
 
+  <div class="modal" id="alert-modal">
+    <div class="modal-content alert-modal-content" id="alert-modal-content-id">
+      <p>your account has been created</p>
+    </div>
+  </div>
+
 </main>
 
 <script>
