app allows users to create accounts, and sign into them :)

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -38,7 +38,8 @@
           </form>
         <input id="check" type="checkbox" class="check" checked>
         <label id="check-label" for="check"><span class="icon">keep me signed in</span></label>
-        <input type="submit" class="button btn-large" value="sign in">
+        <input type="submit" class="button btn-large" value="sign in" onclick="login()">
+        <p id="login-err">&nbsp;</p>
 
       </div>
       <div class="login-text" id="moveable-text">
