minor style updates

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="login-footer">
-        <p>created as a dissertation project by Hashim Hussain</p>
+        <p>some text, maybe an about button</p>
       </div>
     </div>
 
