updated register styling

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1152,7 +1152,7 @@
       <div class="create-inputs">
         <span class="close fa fa-times fa-2x" id="help-span-2"></span>
         <h4>register an account</h4>
-        <div class="createblock">
+        <div class="createblock" id="usernameWrap">
           <label for="usernameIn">username:</label>
           <input type="text" id="usernameIn" onchange="usernameInChange()" autocomplete="new-password"/>
         </div>
@@ -1164,7 +1164,7 @@
           <label for="passwordIn2">re-enter password:</label>
           <input class="passIn" type="password" id="passwordIn2" onchange="passwordChange2()" onkeypress="noWhitespace(event)" />
         </div>
-        <div class="createblock">
+        <div class="createblock" id="emailWrap">
           <label for="emailIn">email:</label>
           <input type="email" id="emailIn" onchange="emailIn()" autocomplete="new-password" />
         </div>
