added "show my tabs" functionality

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -47,6 +47,7 @@
       <div class="signed-in" id="loginboxsignedin">
         <h2 id="welcome"></h2>
         <p>you can now create and upload a tablature to the site. click on the "create tablature" button below to get started.</p>
+        <input type="submit" class="button btn-large" id="switch-view" value="show my tabs" onclick="switchView()">
         <input type="submit" class="button btn-large" value="sign out" onclick="signOut()">
       </div>
 
