updates for current user exclusive options

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -121,11 +121,11 @@
             <!-- playback option buttons -->
           </div>
           <div class="close-tab-btn">
-            <button onclick="closeTab()" class="btn-large">go back</button>
+            <!-- buttons filled by DOM -->
           </div>
         </div>
         <div class="tab-content" id="tab-content-id">
-          <div class="loader">loading...</div>
+          <!-- <div class="loader">loading...</div> -->
           <!-- content to be filled by DOM -->
         </div>
       </div>
