blocked users not signed in from clicking upload, added validation modal

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1265,6 +1265,14 @@
     </div>
   </div>
 
+  <div class="modal" id="createtab-modal">
+    <div class="modal-content createtab-modal-content" id="createtab-modal-content-id">
+      <p><b>note:</b> uploading tablatures is not available for users not signed in, however your tablature can still be downloaded. continue?</p>
+      <button id="cont-yes">yes</button>
+      <button id="cont-no">no</button>
+    </div>
+  </div>
+
 </main>
 
 <script>
