fixed deletion: delete button for each stave created by DOM

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -943,7 +943,7 @@
 
             <div id = "selectToEdit" class="selectstave">
               <label>edit: </label>
-              <input type = "button" id = "deleteStave" value = "delete" title = "Delete the selected Stave" name="deleteStave" onclick = "deleteStave();">
+              <input style="visibility: hidden;">
               <select id = "selectStave" name = "selectStave" onchange="checkStave();">
                 <!-- Options added as staves are created -->
               </select>
