readded audio playback

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -977,7 +977,6 @@
 
             </div>
 
-            <!-- <input type = "button" id = "clearTab" value = "Delete All Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();"> -->
 
             <h4 class="gaph4">symbols</h4>
             <div class="block2" id = "optionBtns">
@@ -1135,7 +1134,12 @@
           </div>
           <div class="audio">
             <h4 class="nogaph4">audio playback</h4>
-            <p>put audio stuff here</p>
+            <div class="audio-btns">
+              <i class="fa fa-play fa-2x" aria-hidden="true" style="margin-right: 2vw;" onclick="playAudio()"></i>
+              <i class="fa fa-pause fa-2x" aria-hidden="true"></i>
+              <i id="audio-stop" class="fa fa-stop fa-2x" aria-hidden="true" style="margin-left: 2vw;"></i>
+            </div>
+
           </div>
 
           <div class="option">
