all alerts replaced with temp error messages

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1280,6 +1280,12 @@
     </div>
   </div>
 
+  <div class="modal" id="alert-msg-modal">
+    <div class="modal-content alert-msg-modal-content">
+      <p id="alert-message"></p>
+    </div>
+  </div>
+
 </main>
 
 <script>
