--- a/webpages/home.html
+++ b/webpages/home.html
@@ -1141,7 +1141,7 @@
               <label style="margin-left: 1vw">bpm:</label>
               <input id="bpm-text" type="text" id="bpmText" value="100" readonly>
               <input class = "slider" id = "myRange" type="range" name="bpmInput" min="40" max="240" oninput="updateBpm(this.value)" value=100>
-            </div>+
+            </div>
 
           </div>
 
