update to sign in section

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -31,7 +31,7 @@
   <div id="griddiv" class="grid-container">
     <div id="loginbox" class="item1">
       <div class="sign-in" id="loginboxsignin">
-        <h2>sign in</h2>
+        <!-- <h2>sign in</h2> -->
           <form id="signin-form" action="SUBMIT">
            <input id="signin-user" type="text" class="input" placeholder="username">
            <input id="signin-pass" type="password" class="input" placeholder="password">
@@ -64,7 +64,7 @@
     </div>
 
     <div id="logintext" class="item2">
-      <h2 class="heading">a guitar tablature creator</h2>
+      <!-- <h2 class="heading">a guitar tablature creator</h2> -->
 
       <!-- will be initially on display, will be replaced by tab-container on a div click -->
       <div class="main-container" id="main-container-id">
