updated sign-in form 3

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -46,7 +46,7 @@
       <!-- this div is hidden until the user is signed in -->
       <div class="signed-in" id="loginboxsignedin">
         <h2 id="welcome"></h2>
-        <p>you can now create and upload a tablature to the site.</p>
+        <p>you can now upload to the site.</p>
         <input type="submit" class="button btn-large" id="switch-view" value="show my tabs" onclick="switchView()">
         <input type="submit" class="button btn-large" value="sign out" onclick="signOut()">
       </div>
