finished left hand side

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -55,11 +55,13 @@
 
       <div class="login-text" id="moveable-text">
         <button id="create-btn" onClick="createTabNew();" class="btn-large">create tablature</button>
+        <p class="left-txt">you can create a tablature without an account to download locally, or, create an account to upload your content to the site. <br> view other users tabs on the right.</p>
+        <p class="left-txt">use the help button on the next page to see how to create your tabs.</p>
       </div>
 
       <div class="login-footer">
-        <p>create an account to upload to the site</p>
-        <button onclick="testSignIn()">test</button>
+        <button id="about-btn" class="btn-large" onclick="aboutModal()">about</button>
+        <p></p>
       </div>
     </div>
 
