updated html script imports
html now imports the 3 js files

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -24,7 +24,9 @@
   /> -->
 </head>
 
-<script src="./js/index.js"></script>
+<script src="./js/home.js"></script>
+<script src="./js/edittab.js"></script>
+<script src="./js/createtab.js"></script>
 
 <main>
   <div id="griddiv" class="grid-container">
